classDiagram
    class Owner {
        +int ID
        +string firstName
        +string lastName
        +createOwner(firstName, lastName)
        +getOwner(id)
        +editOwner(id, firstName, lastName)
		+deleteOwner(id)
    }

    class Pet {
        +int ID
        +string name
        +string animalType
        +string breed
        +int ownerID
        +createPet(ownerID, name, animalType, breed)
        +getPetsByOwner(ownerID)
        +getPet(id)
        +editPet(id, name, animalType, breed)
		+deletePet(id)
    }

    class Task {
        +int ID
        +int petID
        +string name
        +string note
        +int duration
        +string priority
        +string recurrence
        +date scheduledDate
		+time preferredTime
        +time scheduledTime
        +bool completed
        +createTask(petID, name, note, duration, priority, recurrence, scheduledDate)
        +getTask(id)
        +getTasksByOwnerByDate(ownerID, date)
        +getTasksByOwnerByDateRange(ownerID, startDate, endDate)
        +editTask(id, name, note, duration, priority, recurrence, scheduledDate, completed)
		+deleteTask(id)
    }

    class Availability {
        +int ID
        +int ownerID
        +int dayOfWeek
        +time startTime
        +time endTime
		+createAvailability(ownerID, dayOfWeek, startTime, endTime)
        +getAvailabilitiesByOwner(ownerID)
		+getAvailabilitiesByOwnerByDayOfWeek(ownerID, dayOfWeek)
		+getAvailability(id)
		+editAvailability(id, dayOfWeek, startTime, endTime)
		+deleteAvailability(id)
    }

	class Scheduler {
		+generateSchedule(ownerID, date)
	}

    Owner "1" --> "1..*" Pet : owns
    Owner "1" --> "1..*" OwnerAvailability : has
    Pet "1" --> "1..*" Task : has
	Scheduler --> Task : schedules
	Scheduler --> OwnerAvailability : uses
